--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ path = "src/bin.rs"
 
 [dependencies]
 rouille = "3.0.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rustc-serialize = "0.3.24"
