--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ path = "src/bin.rs"
 [dependencies]
 jsonrpc-http-server = "17.0.0"
 jsonrpc-core = "17.0.0"
+log = "0.4"
 
 [dev-dependencies]
 reqwest = { version = "0.11.0", features = ["blocking", "json"] }
