--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ path = "src/bin.rs"
 jsonrpc-http-server = "17.0.0"
 jsonrpc-core = "17.0.0"
 log = "0.4"
+env_logger = "0.8.2"
 
 [dev-dependencies]
 reqwest = { version = "0.11.0", features = ["blocking", "json"] }
